# web

./: .env.example  .env.production.example  .gitignore  .gitleaks.toml  .hadolint-gpu.yaml  .hadolint.yaml  .trivyignore  Caddyfile  Caddyfile.minimal  Caddyfile.minimal.monolith  Caddyfile.production  Dockerfile.caddy  MEDIA_SERVICE_PLAN.md  README.md  RUST_FULL_MIGRATION_PLAN.md  docker-compose.admin.yml  docker-compose.gpu.yml  docker-compose.microservices.prod.yml  docker-compose.observability.yml  docker-compose.override.yml  docker-compose.prod.minimal.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yaml  docker-compose.yml  dump.rdb  go.mod  start.sh  test_e2e_cancel_mid_tts.sh  test_e2e_captions_and_translation.sh  test_e2e_captions_only.sh  test_e2e_full_dubbing.sh  test_e2e_merge_only.sh  test_e2e_stt.sh  test_e2e_translation_and_tts.sh  test_services.sh
backend/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DIALECT_GUIDE.md  Dockerfile  Dockerfile.gpu  Dockerfile.prod  FINAL_STATUS.md  GEMINI.md  GPU_SETUP.md  MEDIA_SERVICE.md  PIPELINE_COMPLETION_STATUS.md  PIPELINE_FLOW_FIX.md  PIPELINE_TESTING_GUIDE.md  PROFESSOR_PROJECT_PROGRESS_REPORT.md  PROGRESSIVE_MERGE_BUFFERING.md  PROGRESSIVE_TTS_IMPLEMENTATION.md  README.md  SESSION_SUMMARY.md  SILMA_TTS_CHANGES.md  SILMA_TTS_MIGRATION.md  TIMELINE_PERSISTENCE_FIX.md  TTS_AUDIO_ACCESS_GUIDE.md  TTS_DISPATCH_FIX.md  TTS_SILENT_AUDIO_FIX.md  WORKER_CLEANUP_COMPLETE.md  alembic.ini  check_job.py  check_shadowing.sh  dablja_media_collection.json  debug_translation.py  docker-compose.yml  dubbing_router_summary.md  entrypoint.sh  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_integration_tests.sh  (+7 more)
backend/alembic/: env.py
backend/alembic/versions/: 036f31c8fe71_rename_hashed_password_to_password.py  161654c63a56_merge_migration_heads.py  341482af562b_initial_migration_with_users_and_roles_.py  4a3c6e5f0f37_add_media_type_to_video.py  7407083b93d0_add_progressive_dubbing_columns_to_jobs_.py  7939187d2620_add_user_preferences_and_cascade_delete.py  8ff75032c048_add_is_active_to_users.py  9fbabd80543e_add_progressive_video_tracking.py  a1b2c3d4e5f6_add_jobs_table.py  a2b3c4d5e6f7_add_dubbing_fields_to_videos.py  a2b3c4d5e6f7_add_video_tasks_table.py  a3a8276c0f9f_merge_heads_google_id_and_processing_.py  a73bb00612a0_merge_branches.py  b1c2d3e4f5a6_create_video_tasks_table.py  b5c6d7e8f901_add_processing_mode_to_video_tasks.py  b8a7c9d1e2f3_add_google_id_to_users.py  c1d2e3f4a5b6_add_combined_audio_key_to_video_tasks.py  c2d4e6f8a0b1_add_dubbing_fields_to_videos.py  c633cb734f34_merge_jobs_and_user_preferences_heads.py  cb61867109a6_initial_schema_creation_users_roles_.py  d298f1b34c73_increase_avatar_url_length.py  d2e3f4a5b6c7_add_stt_segments_to_video_tasks.py  d4e6b1bc8db1_add_nmt_translations.py  e1f2a3b4c5d6_create_videos_table.py  e9ab12cd34ef_align_processing_mode_default_to_single.py  f1a2b3c4d5e6_create_subscription_tables.py  f4d5e6a7b8c9_merge_progressive_and_video_task_heads.py  fcb43ab7b114_align_languages_enum_values.py
backend/app/: config.py  dependencies.py  ffmpeg_service.py  main.py  object_storage.py  storage.py
backend/app/api/: job_router.py  media_routers.py
backend/app/core/: __init__.py  auth.py  db.py  (+8 more)
backend/tests/: __init__.py  conftest.py  test_core_crud.py  test_job_router.py  test_job_service.py  test_user_crud.py  test_worker_result_payload.py
libs/dablja-worker/: pyproject.toml
media-service/: Cargo.toml  Dockerfile  Dockerfile.gpu  README.md  requirements-base.txt  requirements.txt
media-service/app/: config.py  db.py  ffmpeg.py  main.py  merge.py  mux.py  storage.py  worker.py
media-service/src/: main.rs
media-service/tests/: conftest.py  test_config.py  test_mux.py  test_worker_logic.py
(+516 files in other folders)
