[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "asyncpg>=0.31.0",
    "botocore>=1.40.61",
    "celery>=5.6.3",
    "databases>=0.9.0",
    "fastapi>=0.135.3",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "langdetect>=1.0.9",
    "passlib>=1.7.4",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "silma-tts>=1.0.5",
    "slowapi>=0.1.9",
    "soundfile>=0.13.1",
    "sqlalchemy>=2.0.49",
    "starlette>=1.0.0",
    "torch>=2.11.0",
    "transformers>=5.5.0",
    "uvicorn>=0.44.0",
    "alembic>=1.18.4",
    "redis>=7.4.0",
    "python-multipart>=0.0.24",
    "bcrypt>=5.0.0",
    "demucs>=4.0.0",
]
