[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "asyncpg>=0.31.0",
    "botocore>=1.40.61",
    "celery>=5.6.3",
    "databases>=0.9.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.9",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "starlette>=1.0.0",
    "uvicorn>=0.44.0",
    "alembic>=1.18.4",
    "redis>=7.4.0",
    "python-multipart>=0.0.24",
    "bcrypt>=4.0.1,<4.1",
    "flower>=2.0.1",
    "aio-pika>=9.4.0",
]

[dependency-groups]
ai = [
    "faster-whisper>=1.2.1",
    "groq>=0.28.0",
    "langdetect>=1.0.9",
    "silma-tts>=1.0.5",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "transformers>=5.5.0",
]
dev = [
    "coverage>=7.2.0",
    "coverage[toml]>=7.2.0",
    "faker>=19.0.0",
    "freezegun>=1.2.0",
    "mypy>=1.4.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=3.2.0",
    "pytest-mock>=3.11.1",
    "responses>=0.23.0",
    "ruff>=0.14.0",
]
