[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dablja-worker"
version = "0.2.0"
description = "Shared RabbitMQ consumer utilities for DabljaAR pipeline workers"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "pika>=1.3.2",
    "prometheus-client>=0.21.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dablja_worker*"]
